# cut_video

./: CMakeLists.txt  COPYRIGHT  README.md
src/: CMakeLists.txt  log.c  log.h  macros.c  macros.h  main.cpp
src/gui/: main_window.cpp  main_window.h
src/media/: codec_holder.c  codec_holder.h  ffmpeg_utils.c  ffmpeg_utils.h  media_stream_output.c  media_stream_output.h  nal_units.c  nal_units.h  time_utils.c  time_utils.h
